# Hospital_Project_django

./: pyproject.toml  style.yapf
Hospital/Hospital/: settings.py  urls.py
Hospital/entities/: admin.py  models.py  urls.py
Hospital/entities/filters/: base_filters.py  doctor.py  nurse.py  patient.py  room.py
Hospital/entities/migrations/: 0001_initial.py
Hospital/entities/static/css/: button.css  cards.css  form.css  main.css  navbar.css  sidebar.css  table.css  template.css
Hospital/entities/templates/: base.html  index.html
Hospital/entities/templates/content/doctor/detail/: index.html
Hospital/entities/templates/content/doctor/list/: index.html
Hospital/entities/templates/content/nurse/: index.html
Hospital/entities/templates/content/nurse/detail/: index.html
Hospital/entities/templates/content/nurse/list/: index.html
Hospital/entities/templates/content/patient/detail/: index.html
Hospital/entities/templates/content/patient/list/: index.html
Hospital/entities/templates/content/room/detail/: index.html
Hospital/entities/templates/content/room/list/: index.html
Hospital/entities/templates/doctor/: index.html
Hospital/entities/templates/navbar/: index.html
Hospital/entities/templates/sidebar/: index.html
Hospital/entities/views/: doctor.py  homepage.py  nurse.py  patient.py  room.py
